--- a/src/views/components/tandcWindow.mxml
+++ b/src/views/components/tandcWindow.mxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- http://blog.flexexamples.com/2009/10/23/displaying-a-popup-spark-titlewindow-container-in-flex-4/ -->
 <s:Group name="tandcWindow"
-			   xmlns:fx="http://ns.adobe.com/mxml/2009"
-			   xmlns:s="library://ns.adobe.com/flex/spark"
-			   xmlns:mx="library://ns.adobe.com/flex/halo"
-			   color="0xffffff"
-			   fontFamily="Font Rg"
-			   width="100%" height="100%"
-			   resize="group1_resizeHandler(event)"
-			   added="onAdded()"  
-			   remove="exit();" xmlns:controls="com.flexcapacitor.controls.*"  >
+		 xmlns:fx="http://ns.adobe.com/mxml/2009"
+		 xmlns:s="library://ns.adobe.com/flex/spark"
+		 xmlns:mx="library://ns.adobe.com/flex/halo"
+		 color="0xffffff"
+		 fontFamily="Font Rg"
+		 width="700" height="400"
+		 resize="group1_resizeHandler(event)"
+		 added="onAdded()"  
+		 remove="exit();" xmlns:controls="com.flexcapacitor.controls.*"  >
 	<fx:Script>
 		<![CDATA[
 			import flash.events.Event;
@@ -66,37 +66,47 @@
 				
 			}
 			
+			protected function image1_clickHandler(event:MouseEvent):void
+			{
+				// TODO Auto-generated method stub
+				//PopUpManager.removePopUp(this);
+				trace("close window");
+			}
+			
 		]]>
 	</fx:Script>
-		
+	
 	
 	<s:Rect id="tbFill" left="0" right="0" top="0" bottom="0" radiusX="0" >
+		<s:stroke>
+			<s:SolidColorStroke id="borderStroke" color="0x00adee" weight="4"/>
+		</s:stroke>
 		<s:fill>
 			<s:SolidColor color="#FFFFFF"/>
 		</s:fill>
 	</s:Rect>
 	<s:VGroup width="100%" height="100%" paddingBottom="20" paddingTop="20" id="theBox" paddingLeft="20" paddingRight="20">
-	<s:HGroup width="100%" height="15%" horizontalAlign="center" verticalAlign="middle">
-		<s:HGroup width="90%" horizontalAlign="center">
+		<s:HGroup width="100%" height="15%" horizontalAlign="center" verticalAlign="middle" click="image1_clickHandler(event)">
+			<s:HGroup width="90%" horizontalAlign="center">
+				
+				<s:Label id="labelDisplay" 
+						 text="Terms and Conditions"
+						 maxDisplayedLines="1" 
+						 fontFamily="Font Rg CFF"
+						 fontWeight="normal"
+						 fontSize="38"
+						 horizontalCenter="0" verticalCenter="1" verticalAlign="middle" 
+						 color="#00ADEE"/>
+			</s:HGroup>
+			<s:HGroup horizontalAlign="right">
+				<s:Image source="assets/images/closeterms.png"  />
+			</s:HGroup>
 			
-		<s:Label id="labelDisplay" 
-				 text="TERMS AND CONDITIONS"
-				 maxDisplayedLines="1" 
-				 fontFamily="Ultracomp CFF"
-				 fontWeight="normal"
-				 fontSize="50"
-				 horizontalCenter="0" verticalCenter="1" verticalAlign="middle" 
-				 color="0xF383C3"/>
-		</s:HGroup>
-		<s:HGroup horizontalAlign="right">
-			<s:Image source="assets/images/closeterms.png" click="PopUpManager.removePopUp(this);" />
-		</s:HGroup>
-			
-	</s:HGroup>	
-	
-	<controls:WebView visible="false" id="tec" width="100%" height="80%" addedToStage="ta_addedToStageHandler(event)" render="tec_renderHandler(event)" resize="tec_resizeHandler(event)" />
+		</s:HGroup>	
+		
+		<controls:WebView visible="false" id="tec" width="100%" height="80%" addedToStage="ta_addedToStageHandler(event)" render="tec_renderHandler(event)" resize="tec_resizeHandler(event)" />
 	</s:VGroup>
-
+	
 	<fx:Metadata>
 		[Event(name="showTerms", type="flash.events.Event")]
 	</fx:Metadata>
@@ -109,10 +119,7 @@
 			protected var myStage:StageWebView;
 			
 			protected function ttlWndw_close(evt:CloseEvent):void {
-				//myStage.visible=false;
-				//myStage.viewPort = new Rectangle(100,100,100,100);
-				//myStage.dispose();
-				//myStage = null;
+				trace("inside ttlWndw_close");
 				PopUpManager.removePopUp(evt.currentTarget as IFlexDisplayObject);
 			}
 			
@@ -165,6 +172,6 @@
 			
 		]]>
 	</fx:Script>
-
-
+	
+	
 </s:Group>
