--- a/src/assets/css/Fonts.css
+++ b/src/assets/css/Fonts.css
@@ -1,28 +1,28 @@
 @font-face
 {
 	fontFamily: "Font Rg";
-	src: url("/assets/fonts/SGH Medium-Regular.otf");
+	src: url("/assets/fonts/Brandon_bld.otf");
 	embedAsCFF: false;
 	fontWeight:normal;
 }
 @font-face
 {
 	fontFamily: "Font Rg CFF";
-	src: url("/assets/fonts/SGH Medium-Regular.otf");
+	src: url("/assets/fonts/Brandon_bld.otf");
 	embedAsCFF: true;
 }
 
 @font-face
 {
 	fontFamily: "Font Bd";
-	src: url("/assets/fonts/SGH Medium-Regular.otf");
+	src: url("/assets/fonts/Brandon_bld.otf");
 	fontWeight:bold;
 }
 
 @font-face
 {
 	fontFamily: "Font Bd CFF";
-	src: url("/assets/fonts/SGH Medium-Regular.otf");
+	src: url("/assets/fonts/Brandon_bld.otf");
 	embedAsCFF: true;
 	fontWeight:bold;
 }
@@ -30,29 +30,13 @@
 @font-face
 {
 	fontFamily: "Font Light";
-	src: url("/assets/fonts/SGH Light-Regular.otf");
+	src: url("/assets/fonts/Brandon_light.otf");
 	embedAsCFF: false;
 }
 @font-face
 {
 	fontFamily: "Font Light CFF";
-	src: url("/assets/fonts/SGH Light-Regular.otf");
+	src: url("/assets/fonts/Brandon_light.otf");
 	embedAsCFF: true;
 }
 
-@font-face
-{
-	fontFamily: "Ultracomp CFF";
-	src: url("/assets/fonts/SGH UltComp-Regular.otf");
-	fontWeight:normal;
-	embedAsCFF: true;
-	typographicCase:uppercase;
-}
-
-@font-face
-{
-	fontFamily: "Ultracomp";
-	src: url("/assets/fonts/SGH UltComp-Regular.otf");
-	embedAsCFF: true;
-	typographicCase:uppercase;
-}
