--- a/src/views/LikeApp.mxml
+++ b/src/views/LikeApp.mxml
@@ -156,14 +156,14 @@
 	<s:BitmapImage source="@Embed('assets/images/logo.png')"/>
 			<s:Spacer height="70"/>
 			<s:HGroup>
-				<s:Label fontFamily="Ultracomp CFF" text="PLEASE" color="0xFFFFFF" fontSize="70" />
-				<s:Label fontFamily="Ultracomp CFF" text="LIKE" color="0xF383C3" fontSize="70" />
-				<s:Label fontFamily="Ultracomp CFF" text=" THE SUNGLASS HUT FANPAGE" color="0xFFFFFF" fontSize="70" />
+				<s:Label fontFamily="Font Rg CFF" text="PLEASE" color="0xFFFFFF" fontSize="60" />
+				<s:Label fontFamily="Font Rg CFF" text="LIKE" color="0xED1C24" fontSize="60" />
+				<s:Label fontFamily="Font Rg CFF" text=" THE SUNGLASS HUT FANPAGE" color="0xFFFFFF" fontSize="60" />
 			</s:HGroup>
 	
 			<s:Spacer height="70"/>	
 				<s:HGroup verticalAlign="middle">
-				<s:BorderContainer backgroundColor="#FFFFFF" height="73" borderVisible="false" width="239" id="placo" creationComplete="placo_creationCompleteHandler(event)" resize="placo_resizeHandler(event)" move="placo_moveHandler(event)"/>
+				<s:BorderContainer backgroundColor="#FFFFFF" height="80" borderVisible="false" width="250" id="placo" creationComplete="placo_creationCompleteHandler(event)" resize="placo_resizeHandler(event)" move="placo_moveHandler(event)"/>
 				<s:Button width="239" height="73" label="CONTINUE" click="takePhoto(event)" horizontalCenter="0"
 						  verticalCenter="0"/> 
 				</s:HGroup>
