--- a/src/skins/CustomButton.mxml
+++ b/src/skins/CustomButton.mxml
@@ -107,14 +107,14 @@ in accordance with the terms of the license agreement accompanying it.
 	<s:Label id="labelDisplay" 
 			 textAlign="center" 
 			 maxDisplayedLines="1" 
-			 fontFamily="Ultracomp CFF"
+			 fontFamily="Font Rg CFF"
 			 fontWeight="normal"
-			 fontSize="50"
-			 horizontalCenter="0" verticalCenter="1" verticalAlign="middle" paddingTop="4"
-			 color="0xF383C3">
+			 fontSize="40"
+			 horizontalCenter="0" verticalCenter="1" verticalAlign="middle" paddingTop="15"
+			 color="0xED1C24">
 	</s:Label>
 		<s:Spacer width="5" />
 		<s:BitmapImage source="@Embed('assets/images/button/button_normal.png')" includeIn="up,disabled"  />
-		<s:BitmapImage source="@Embed('assets/images/button/button_pressed.png')" includeIn="down"  />
+		<s:BitmapImage source="@Embed('assets/images/button/button_pressed.png')" includeIn="down" />
 	</s:HGroup>
 </s:SparkButtonSkin>
