--- a/src/skins/barTitleWindow.mxml
+++ b/src/skins/barTitleWindow.mxml
@@ -230,7 +230,7 @@
                 <!--- @copy spark.components.Panel#titleDisplay -->
                 <s:Label id="titleDisplay" maxDisplayedLines="1"
                          left="9" right="36" top="1" bottom="0" minHeight="30" fontSize="32"
-                         verticalAlign="middle" fontFamily="Ultracomp CFF" color="0xffffff" />
+                         verticalAlign="middle" fontFamily="Font Rg CFF" color="0xffffff" />
                 
                 <!-- layer 4: moveArea -->
                 <!--- @copy spark.components.TitleWindow#moveArea -->
@@ -268,7 +268,7 @@
                     <!-- layer 2: control bar fill -->
                     <s:Rect left="1" right="1" top="2" bottom="1">
                         <s:fill>
-							 <s:SolidColor color="#E28CBB" />
+							 <s:SolidColor color="#ED1C24" />
 						 </s:fill>
                     </s:Rect>
                 </s:Group>
