--- a/src/views/FaceBookAuth01.mxml
+++ b/src/views/FaceBookAuth01.mxml
@@ -293,7 +293,7 @@
 	<s:VGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
 		<s:Label id="status_label" includeInLayout="false" text="status" color="0x000000" />
 		<s:BorderContainer width="100%" height="100%" id="container">
-			<s:BusyIndicator horizontalCenter="0" verticalCenter="0" width="100" height="100" rotationInterval="200" symbolColor="#F383C3" id="busone" />
+			<s:BusyIndicator horizontalCenter="0" verticalCenter="0" width="100" height="100" rotationInterval="200" symbolColor="#ED1C24" id="busone" />
 		</s:BorderContainer>
 	</s:VGroup>
 </s:View>
