--- a/src/views/ScanWristband.mxml
+++ b/src/views/ScanWristband.mxml
@@ -175,11 +175,11 @@
 			<s:BitmapImage width="100%" height="100%" scaleMode="zoom" smooth="true" smoothingQuality="high" source="{Resource.BACKGROUND_HOME}"/>
 		</s:VGroup>
 		<s:VGroup width="100%" height="100%" horizontalAlign="left" verticalAlign="middle" paddingLeft="30">
-			<s:Label text="STYLE IT OUT" fontSize="180" color="0xF383C3"  fontFamily="Ultracomp CFF"  />
-			<s:Label text="SUNGLASS HUT" fontSize="106" color="0x8A8A8D"  fontFamily="Ultracomp CFF"  />
+			<s:Label text="STYLE IT OUT" fontSize="150" color="0xED1C24"  fontFamily="Font Rg CFF"  />
+			<s:Label text="SUNGLASS HUT" fontSize="106" color="0x8A8A8D"  fontFamily="Font Rg CFF"  />
 			<s:Spacer height="180"/>
 			
-			<s:Button label="BEGIN" click="generate_urn(event)"/>
+			<s:Button label="BEGIN" click="generate_urn(event)" skinClass="skins.CustomButtonHome"/>
 			
 			
 		</s:VGroup>	
