--- a/src/views/SelectUserType.mxml
+++ b/src/views/SelectUserType.mxml
@@ -132,27 +132,24 @@
 				<s:VGroup horizontalAlign="center" >
 					
 					
-					<s:VGroup width="{groupWidth}" horizontalAlign="right">
-						<s:HGroup horizontalAlign="center" verticalAlign="middle" width="100%" paddingBottom="10" >
+					<s:VGroup horizontalAlign="center">
+						<s:HGroup horizontalAlign="center" verticalAlign="middle"  paddingBottom="10" >
 							
-							<s:HGroup horizontalAlign="right" width="{largeText.width}">
+							<s:HGroup horizontalAlign="right" verticalAlign="middle">
 								
-							<s:Label fontSize="22" styleName="smallprint"
-									 text="I agree with the" paddingTop="10" />
-							<s:Label fontSize="22" click="tandcd_clickHandler(event)"
-									 styleName="smallprintLink" text="Terms and Conditions" paddingTop="10"
-									 />
+								<s:Label fontSize="22" styleName="smallprint"
+										 text="I agree with the" paddingTop="10" />
+								<s:Label fontSize="22" 
+										 styleName="smallprintLink" click="tandcd_clickHandler(event)" text="Terms and Conditions" paddingTop="10"
+										 />
 							</s:HGroup>
 							<s:Spacer width="10"/>
 							<s:CheckBox id="termsCheck" label="" selected="true"
 										color="#000000" skinClass="skins.vodafoneCheckBox" width="36"/>
-							
-							
-							
 						</s:HGroup>
 						<s:Rect width="{groupWidth}" height="2" >
 							<s:fill>
-								<s:SolidColor color="#E28CBB" />
+								<s:SolidColor color="#ED1C24" />
 							</s:fill>
 						</s:Rect>
 						<s:HGroup horizontalAlign="center" verticalAlign="top" paddingTop="10" width="{groupWidth}">
