--- a/src/views/components/CopyoftandcWindow.mxml
+++ b/src/views/components/CopyoftandcWindow.mxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- http://blog.flexexamples.com/2009/10/23/displaying-a-popup-spark-titlewindow-container-in-flex-4/ -->
 <s:VGroup name="tandcWindow"
-		  xmlns:fx="http://ns.adobe.com/mxml/2009"
-		  xmlns:s="library://ns.adobe.com/flex/spark"
-		  xmlns:mx="library://ns.adobe.com/flex/halo"
-		  color="0xffffff"
-		  fontFamily="Font Rg"
-		  width="700" height="400"
-		  resize="group1_resizeHandler(event)"
-		  added="onAdded()"  
-		  remove="exit();" xmlns:controls="com.flexcapacitor.controls.*"  >
+		 xmlns:fx="http://ns.adobe.com/mxml/2009"
+		 xmlns:s="library://ns.adobe.com/flex/spark"
+		 xmlns:mx="library://ns.adobe.com/flex/halo"
+		 color="0xffffff"
+		 fontFamily="Font Rg"
+		 width="700" height="400"
+		 resize="group1_resizeHandler(event)"
+		 added="onAdded()"  
+		 remove="exit();" xmlns:controls="com.flexcapacitor.controls.*"  >
 	<fx:Script>
 		<![CDATA[
 			import flash.events.Event;
@@ -22,7 +22,7 @@
 			import mx.events.ResizeEvent;
 			import mx.managers.PopUpManager;
 			
-			
+
 			
 			protected var isremoving:Boolean = false;
 			[Bindable]
@@ -39,10 +39,9 @@
 			
 			protected function exit(e:FlexEvent=null):void
 			{
-				trace("TERMS POPUP EXIT");
 				clearInterval(tempo);
 				isremoving = true;
-				
+
 				
 			}
 			public function get isRemoving():Boolean
@@ -71,10 +70,10 @@
 			protected function image1_clickHandler(event:MouseEvent):void
 			{
 				// TODO Auto-generated method stub
-				PopUpManager.removePopUp(this);
+				//PopUpManager.removePopUp(this);
 				trace("close window");
 				
-				
+
 			}
 			
 		]]>
@@ -91,7 +90,7 @@
 	</s:Rect>
 	<s:VGroup width="100%" height="100%" paddingBottom="20" paddingTop="20" id="theBox" paddingLeft="20" paddingRight="20">
 		<s:HGroup width="100%" height="15%" horizontalAlign="center" verticalAlign="middle" click="image1_clickHandler(event)">
-			<s:HGroup width="90%" horizontalAlign="center" click="image1_clickHandler(event)">
+			<s:HGroup width="90%" horizontalAlign="center">
 				
 				<s:Label id="labelDisplay" 
 						 text="Terms and Conditions"
