--- a/src/views/components/ErrorAlert.mxml
+++ b/src/views/components/ErrorAlert.mxml
@@ -46,16 +46,16 @@
 	</fx:Declarations> 
 		<s:Rect id="tbFill" left="0" right="0" top="0" bottom="1" radiusX="0" filters="{[shadowfilter]}">
 			<s:stroke>
-				<s:SolidColorStroke color="#E28CBB" weight="0">
+				<s:SolidColorStroke color="#ED1C24" weight="0">
 					
 				</s:SolidColorStroke>
 			</s:stroke>
 			<s:fill>
-				<s:SolidColor color="#E28CBB"/>
+				<s:SolidColor color="#ED1C24"/>
 			</s:fill>
 		</s:Rect>
 		<s:VGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
-			<s:Label x="81" y="124" color="#FFFFFF" fontSize="32" fontFamily="Ultracomp CFF" text="{windowTitle}"/>
+			<s:Label x="81" y="124" color="#FFFFFF" fontSize="32" fontFamily="Font Rg CFF" text="{windowTitle}"/>
 			<s:TextArea x="58" y="79" width="484" height="140" color="0x000000" editable="false"
 						fontSize="18" verticalAlign="middle" text="{message}" 
 						selectable="false" />
