--- a/src/views/components/ModalAlert.mxml
+++ b/src/views/components/ModalAlert.mxml
@@ -79,11 +79,11 @@
 				</s:SolidColorStroke>
 			</s:stroke>
 			<s:fill>
-				<s:SolidColor color="#E28CBB"/>
+				<s:SolidColor color="#ED1C24"/>
 			</s:fill>
 		</s:Rect>
 		<s:VGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
-			<s:Label x="81" y="124" color="#FFFFFF" fontSize="32"  fontFamily="Ultracomp CFF" lineBreak="toFit" text="{windowTitle}"  width="500"/>
+			<s:Label x="81" y="124" color="#FFFFFF" fontSize="32"  fontFamily="Font Rg CFF" lineBreak="toFit" text="{windowTitle}"  width="500"/>
 			<s:TextArea x="58" y="79" width="484" height="140" color="0x000000"  editable="false"
 						fontSize="16" verticalAlign="middle" text="{message}" 
 						selectable="false" />
