--- a/src/views/CameraCapture.mxml
+++ b/src/views/CameraCapture.mxml
@@ -92,8 +92,7 @@
 			
 			private var theBitmapAsset:BitmapAsset;
 			
-			[Embed(source="assets/images/nophoto.jpg")]
-			private var embeddedNoPhoto : Class;
+
 			
 			private var sizeDefined:Boolean=false;
 			private var squareDims:Rectangle=new Rectangle(0,0,0,0);
@@ -683,17 +682,17 @@
 				<s:Label id="statusText" color="#009BD7" />
 				<s:HGroup horizontalAlign="center" verticalAlign="middle">
 					<s:VGroup width="33%" height="100%" horizontalAlign="center">
-						<s:BitmapImage id="photo1Preview" width="100%"   source="@Embed('assets/images/nophoto.jpg')" ready="photo1Preview_readyHandler(event)"    complete="photo1Preview_completeHandler(event)" fillMode="scale" scaleMode="zoom" smooth="true" />
+						<s:BitmapImage id="photo1Preview" width="100%"   source="{com.alfo.res.Resource.NO_PHOTO}" ready="photo1Preview_readyHandler(event)"    complete="photo1Preview_completeHandler(event)" fillMode="scale" scaleMode="zoom" smooth="true" />
 						<s:Button id="takePhotoButton" horizontalCenter="0" label="TAKE PHOTO 1"  click="takePhoto(0)"/>
 					</s:VGroup>
 					<s:Spacer width="10" />
 					<s:VGroup width="33%" height="100%" horizontalAlign="center" >
-						<s:BitmapImage id="photo2Preview" width="100%" source="@Embed('assets/images/nophoto.jpg')"  ready="photo1Preview_readyHandler(event)" complete="photo1Preview_completeHandler(event)" scaleMode="zoom" smooth="true" />
+						<s:BitmapImage id="photo2Preview" width="100%" source="{com.alfo.res.Resource.NO_PHOTO}"  ready="photo1Preview_readyHandler(event)" complete="photo1Preview_completeHandler(event)" scaleMode="zoom" smooth="true" />
 						<s:Button  horizontalCenter="0" label="TAKE PHOTO 2"  click="takePhoto(1)"/>
 					</s:VGroup>
 					<s:Spacer width="10" />
 					<s:VGroup width="33%" height="100%" horizontalAlign="center">
-						<s:BitmapImage id="photo3Preview" width="100%"  source="@Embed('assets/images/nophoto.jpg')"  ready="photo1Preview_readyHandler(event)" complete="photo1Preview_completeHandler(event)" scaleMode="zoom" smooth="true" />
+						<s:BitmapImage id="photo3Preview" width="100%"  source="{com.alfo.res.Resource.NO_PHOTO}"  ready="photo1Preview_readyHandler(event)" complete="photo1Preview_completeHandler(event)" scaleMode="zoom" smooth="true" />
 						<s:Button  horizontalCenter="0" label="TAKE PHOTO 3"  click="takePhoto(2)"/>
 					</s:VGroup>
 				</s:HGroup>
