--- a/src/views/LikeApp.mxml
+++ b/src/views/LikeApp.mxml
@@ -153,7 +153,7 @@
 	<s:BorderContainer width="100%" height="100%" borderVisible="false" backgroundColor="0x000000">
 		<s:BitmapImage width="100%" height="100%" scaleMode="zoom" smooth="true" smoothingQuality="high" source="{Resource.BACKGROUND}"/>
 		<s:VGroup width="100%" height="100%" verticalAlign="middle" horizontalAlign="center" >
-	<s:BitmapImage source="@Embed('assets/images/logo.png')"/>
+	<s:BitmapImage source="@Embed('/assets/images/logo.png')"/>
 			<s:Spacer height="70"/>
 			<s:HGroup>
 				<s:Label fontFamily="Font Rg CFF" text="PLEASE" color="0xFFFFFF" fontSize="60" />
