--- a/src/views/Thankyou.mxml
+++ b/src/views/Thankyou.mxml
@@ -43,7 +43,7 @@
 	</fx:Declarations>
 	<s:BorderContainer height="100%" width="100%" id="gino" backgroundColor="0x000000">
 		<s:VGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
-			<s:Image smooth="true"  source="@Embed('assets/images/thank_you.png')" />
+			<s:Image smooth="true"  source="@Embed('/assets/images/thank_you.png')" />
 		</s:VGroup>	
 		
 		
