--- a/src/views/UserForm.mxml
+++ b/src/views/UserForm.mxml
@@ -3,7 +3,7 @@
 		xmlns:s="library://ns.adobe.com/flex/spark"
 		xmlns:mx="library://ns.adobe.com/flex/mx"
 		addedToStage="onAddedToStage()"
-		removedFromStage="removed(event)" backgroundColor="0X000000">
+		removedFromStage="removed(event)" backgroundColor="#000000">
 	<fx:Script>
 		<![CDATA[
 			import com.alfo.DelayedExecution;
@@ -160,7 +160,7 @@
 		
 		<s:VGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
 			
-			<s:BitmapImage source="@Embed('assets/images/logo.png')"/>
+			<s:BitmapImage source="@Embed('/assets/images/logo.png')"/>
 			<s:Spacer height="33"/>
 			<s:Form id="userform"  horizontalCenter="0" verticalCenter="0" backgroundAlpha="0">
 				<s:layout>
